# qapi-python

./: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/protos/: qapi.proto
src/qapi_python/: __init__.py  cli.py
src/qapi_python/actors/: Qapi.py  Sink.py  Source.py
src/qapi_python/client/: Manifest.py  Qapi.py  QapiHttp.py  Scheduler.py  qapi_pb2.py  qapi_pb2_grpc.py
src/qapi_python/screening/factor/: Factor.py  Inspect.py
src/qapi_python/screening/universe/: Universe.py
src/qapi_python/stages/: Function.py
tests/: ClientTest.py  DatasetBuilder.py  Decorators.py  Inspect.py  MyFile.py  __init__.py  pyproject.toml  test_qapi_python.py
