[build-system]
requires = ["setuptools>=61.0"]

build-backend = "setuptools.build_meta"

[project]
name = "qapi_python"
version = "0.1.0"
description = "Qapi Python"
readme = "README.rst"
authors = [
  {name = "Ariel Fischer", email = "ariel.fischer@qapio.com"}
]
maintainers = [
  {name = "Ariel Fischer", email = "ariel.fischer@qapio.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer",
    "pykka",
    "pandas",
    "reactivex",
    "grpcio",
    "protobuf",
    "requests",
    "annotate"
]

[tool.poetry.dependencies]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/arieldf/qapi_python/issues"
changelog = "https://github.com/arieldf/qapi_python/blob/master/changelog.md"
homepage = "https://github.com/arieldf/qapi_python"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

