[build-system]
requires = ["setuptools>=61.0"]

build-backend = "setuptools.build_meta"
#
[project]
name = "qapi_python"
version = "0.1.0"
description = "Qapi Python"
readme = "README.rst"
#authors = [
#  {name = "Ariel Fischer", email = "ariel.fischer@qapio.com"}
#]
#maintainers = [
#  {name = "Ariel Fischer", email = "ariel.fischer@qapio.com"}
#]
#classifiers = [
#
#]
#license = {text = "MIT license"}
#dependencies = [
#  "typer",
#    "pykka",
#    "pandas",
#    "reactivex",
#    "grpcio",
#    "protobuf",
#    "requests",
#    "annotate"
#]

[tool.poetry.dependencies]
typer = "0.12.5"
pykka = "4.0.2"
pandas = "2.2.3"
reactivex = "4.0.4"
grpcio = "1.66.2"
protobuf = "5.28.2"
requests = "2.32.3"
annotate = "1.1.1"

[tool.poetry]
name = "qapi-python"
version = "0.1.0"
description = ""
authors = ["Ariel Fischer <ariel.fischer@qapio.com>"]
readme = "README.md"

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/arieldf/qapi_python/issues"
changelog = "https://github.com/arieldf/qapi_python/blob/master/changelog.md"
homepage = "https://github.com/arieldf/qapi_python"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

