[tool.poetry]
name = "qapi-test"
version = "0.1.0"
description = ""
authors = ["Ariel Fischer <ariel.fischer@qapio.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
annotate = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
