[tool.poetry]
name = "qapi-test"
version = "0.1.0"
description = ""
authors = ["Ariel Fischer <ariel.fischer@qapio.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
qapi-python = {git = "https://github.com/qapio/qapi-python.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
